# rust-tar_light

./: .gitignore  Cargo.toml  README.md  SECURITY.md  a.tar  justfile  new_archive.tar
output_directory/: README.md  lib.rs  main.rs  tar.rs
src/: lib.rs  main.rs  tar.rs
testdata/: file2.txt  simple.tar  test.tar  test.txt
