[package]
name = "tar_light"
version = "0.1.4"
edition = "2024"
authors = ["kujirahand"]
description = "Simple tar archive reader and writer library"
license = "MIT"
repository = "https://github.com/kujirahand/rust-tar_light"
readme = "README.md"
keywords = ["tar", "archive", "compression", "gzip"]
categories = ["filesystem", "compression"]
documentation = "https://docs.rs/tar_light"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
flate2 = "1.0"
